--- a/projects/fantatic/frontend/sass/inside/catalog.sass
+++ b/projects/fantatic/frontend/sass/inside/catalog.sass
@@ -9,9 +9,9 @@
       text-align: center
       margin-top: 50px
     .t-catalogLeft
-      width: 944px
+      width: 74.214%
     .t-catalogRight
-      width: 304px
+      width: 23.89%
       .t-catalogRightContainer
         width: 100%
         height: auto
