--- a/projects/fantatic/frontend/templates/catalog.jade
+++ b/projects/fantatic/frontend/templates/catalog.jade
@@ -20,7 +20,7 @@ block content
                             span.t-sortArrow.t-sortArrowDown По имени
                         li.t-sortContainerLinks
                             span.t-sortArrow.t-sortArrowDown По цене
-                    div.t-cardsHolder
+                    div.t-cardsHolder.t-sliderCtrl
                         + tCards()
                         + tCards()
                         + tCards()
