--- a/projects/fantatic/frontend/templates/_layout.jade
+++ b/projects/fantatic/frontend/templates/_layout.jade
@@ -120,6 +120,8 @@ html(lang="ru-RU")
         link(rel='stylesheet', href="/css/main.min.css")
         link(rel='stylesheet', href="/css/plugins/owl.carousel.min.css")
         link(rel='stylesheet', href="/css/plugins/owl.theme.default.min.css")
+        link(rel='stylesheet', href="/css/plugins/jquery.formstyler.css")
+        link(rel='stylesheet', href="/css/plugins/jquery.formstyler.theme.css")
         link(rel='stylesheet', href="/css/plugins/magnific-popup.css")
     body.t-windowLoading.fixed.t-animeOne
         div.wrapper
@@ -132,6 +134,7 @@ html(lang="ru-RU")
 
         script(src="/js/vendor.min.js")
         script(src="/js/plugins/owl.carousel.min.js")
+        script(src="/js/plugins/jquery.formstyler.min.js")
         script(src="/js/plugins/jquery.magnific-popup.min.js")
         script(src="/js/reviewsSlider.js")
         script(src="/js/main.min.js")
