--- a/projects/fantatic/frontend/sass/_default.sass
+++ b/projects/fantatic/frontend/sass/_default.sass
@@ -413,6 +413,7 @@ main
     top: -1px
     opacity: 0
   .t-goodsCardImage
+    margin: auto
     width: 240px
     height: 240px
     margin-bottom: 24px
@@ -1018,3 +1019,19 @@ main
     .t-accordItemContent
       display: none
       padding-top: 8px
+
+
+@mixin bGrid($qty, $margin)
+  width: ((100% - (($qty - 1) * $margin))/$qty)
+  &:nth-child(n)
+    margin-right: $margin
+    margin-bottom: $margin
+
+  &:nth-child(#{$qty}n)
+    margin-right: 0
+    margin-bottom: 0
+
+@mixin bGrid2($qty, $margin)
+  width: ((100% - (($qty - 1) * $margin))/$qty)
+  &:nth-child(n)
+    margin-bottom: $margin
