--- a/projects/fantatic/frontend/templates/catalog.jade
+++ b/projects/fantatic/frontend/templates/catalog.jade
@@ -1,6 +1,6 @@
 extends _layout
 block content
-    main
+    main.t-catalogMain
         section.t-catalogWrapper
             h2.t-sectionTitle  Подарки с юмором
             div.t-breadCrumbs
