--- a/projects/jtProject/frontend/sass/_default.sass
+++ b/projects/jtProject/frontend/sass/_default.sass
@@ -33,25 +33,12 @@ main
 .t-mainPageMain
   width: 100vw
   overflow: hidden
-
-
-.t-fixed
-  position: fixed
-  left: 0
-  top: 0
-  width: 100vw
-
-.t-contentFixed
-  top: 143px
-  left: 0
-  z-index: 1
+  padding-right: 5px
 
 .t-mainCardsHolder
   display: flex
   flex-wrap: nowrap
   padding-top: 30px
 
-.t-mainSvg
-  width: 1.3em
-  height: 1.3em
-
+.t-mainCardsHolder::-webkit-scrollbar
+  display: none
