--- a/projects/jtProject/frontend/sass/modules/aside.sass
+++ b/projects/jtProject/frontend/sass/modules/aside.sass
@@ -1,7 +1,7 @@
 aside
   padding: 30px 67px 0 64px
   background-color: $white
-  flex: 0 0 13%
+  flex: 0 0 335px
   //width: 14%!important
   .t-menuList
     list-style: none
