--- a/projects/jtProject/frontend/sass/modules/main.sass
+++ b/projects/jtProject/frontend/sass/modules/main.sass
@@ -5,6 +5,9 @@ main
     margin-right: 16px
     min-width: 400px
     height: 560px
+    transition: .4s
+    &:last-child
+      margin: 0
     .t-newsCatNameAndDateHolder
       width: 100%
       display: flex
