--- a/projects/jtProject/frontend/sass/_default.sass
+++ b/projects/jtProject/frontend/sass/_default.sass
@@ -30,7 +30,8 @@ main
   width: 100vw
   //min-height: calc(100vh - 462px)
 
-.t-mainPageMain
+
+.t-mainMain
   width: 100vw
   overflow: hidden
   padding-right: 5px
@@ -38,7 +39,8 @@ main
 .t-mainCardsHolder
   display: flex
   flex-wrap: nowrap
-  padding-top: 30px
+  &.t-mainPageCardCtrl
+    padding-top: 30px
 
 .t-mainCardsHolder::-webkit-scrollbar
   display: none
