--- a/projects/jtProject/frontend/templates/_header.jade
+++ b/projects/jtProject/frontend/templates/_header.jade
@@ -1,28 +1,29 @@
-header
+div.t-logoSection
     a(href="/").t-logoWrapper
         div.t-logo
-    div.t-sortAndCatWrapper
-        ul.t-sortContainer
-            li
-                a(href="#") Всё сразу
-            li
-                a(href="#") По дате
-            li i
-        ul.t-categoriesContainer
-            li.active
-                a(href="#") Все темы
-            li
-                a(href="#") Дизайн
-            li
-                a(href="#") Маркетинг
-            li
-                a(href="#") CEO
-            li
-                a(href="#") Разработка
-            li
-                a(href="#") Бизнес
-            li i
-        ul.t-headerButtons
-            li i
-            li I
-            li I
+
+div.t-topRightSection
+    div.t-nameAndSortWrapper
+        span.t-namePage Всё сразу
+        div.t-topSortWrapper
+            span.t-topSortName По дате
+            span.t-icon Ico
+    ul.t-topListCtrl.t-topMiddleSection
+        li
+            a(href="#").t-topSortLinks.active Все темы
+        li
+            a(href="#").t-topSortLinks Дизайн
+        li
+            a(href="#").t-topSortLinks Маркетинг
+        li
+            a(href="#").t-topSortLinks CEO
+        li
+            a(href="#").t-topSortLinks Разработка
+        li
+            a(href="#").t-topSortLinks Бизнес
+        li
+            a(href="#").t-topSortLinks ico
+    ul.t-topListCtrl.t-topRightSection
+        li ico
+        li ico
+        li ico
