--- a/projects/jtProject/frontend/templates/aside.jade
+++ b/projects/jtProject/frontend/templates/aside.jade
@@ -24,7 +24,7 @@ aside
             li.t-menuListItem
                 a(href="#") События
             li.t-menuListItem
-                a(href="#") Авторы
+                a(href="/authors.html") Авторы
             li.t-menuListItem
                 a(href="#") Информация
     div.t-copyWrapper
