--- a/projects/jtProject/frontend/sass/modules/main.sass
+++ b/projects/jtProject/frontend/sass/modules/main.sass
@@ -5,6 +5,7 @@ main
     margin-right: 16px
     min-width: 400px
     height: 560px
+    flex: 0 0 400px
     transition: .4s
     &:last-child
       margin: 0
@@ -16,8 +17,13 @@ main
       @include fontsSizes(14, normal, 17)
       color: $lgreySec
       top: -30px
+      transition: .3s ease-in-out
       span
         display: inline-block
+    &:hover
+      .t-newsCatNameAndDateHolder
+        transform: translateY(8px)
+        opacity: 0
   .t-newsCard
     position: relative
     color: $white
@@ -27,10 +33,12 @@ main
       margin: 0
       padding: 0
     .t-newsCardImg
+      width: 400px
+      height: 560px
       img
         display: block
         width: 100%
-        height: 560px
+        height: 100%
         transition: .3s ease
         object-fit: cover
     .t-newsCardInfoHolder
@@ -49,6 +57,7 @@ main
       .t-newsContentBody
         .t-newsTitle
           display: inline-block
+          white-space: normal
           position: relative
           margin: 0 0 48px 0
           @include fontsSizes(26, bold, 32)
@@ -100,6 +109,11 @@ main
           color: $white
           &:not(:last-child)
             margin-right: 8px
+      &.duplicate
+        transition: .4s
+        position: absolute
+        left: 40px
+        top: 40px
     &:hover
       .t-newsCardImg
         img
@@ -108,3 +122,6 @@ main
       .t-newsCardInfoHolder
         opacity: 1
         transition-delay: .3s
+      .t-newsParams.duplicate
+        transition-delay: .4s
+        opacity: 0
