--- a/projects/jtProject/frontend/templates/_layout.jade
+++ b/projects/jtProject/frontend/templates/_layout.jade
@@ -1,9 +1,15 @@
 mixin card (changeImage)
-    div.t-newsCardWrapper
+    div.t-newsCardWrapper.t-scrollBar
         div.t-newsCatNameAndDateHolder
             span.t-newsDate 14 января
             span.t-newsCategory Категория
         div.t-newsCard
+            div.t-newsParams.duplicate
+                ul
+                    li 475
+                    li 987
+                    li 340K
+                    li 2M
             div.t-newsCardImg
                 img(src=""+ changeImage +"")
             div.t-newsCardInfoHolder
@@ -36,6 +42,24 @@ mixin card (changeImage)
                             span Ico
 
 
+mixin authorCard(changeImg, name, profession, count, likes)
+    div.t-authorCardWrapper.t-scrollBar
+        a(href="#")
+            div.t-authorImgHolder
+                img(src=""+ changeImg +"")
+            div.t-authorInfo
+                h1.t-authorName= name
+                span.t-authorProfession= profession
+                div.t-authorArticlesCountWrapper
+                    span.t-name Статей
+                    span.t-authorArticlesCount= count
+                ul.t-authorTags
+                    li Дизайн,
+                    li бизнес,
+                div.t-authorLikesHolder
+                    span ico
+                    span.t-authorLikesCount= likes
+
 doctype html
 html(lang="ru-RU")
     head
@@ -49,13 +73,15 @@ html(lang="ru-RU")
         link(rel='stylesheet', href="css/main.min.css")
     body
         div.t-mainWrapper
-            include _header
-            div.t-contentWrapper
+            header
+                include _header
+            section.t-contentWrapper
                 block content
 
         script(src="js/vendor.min.js")
         script(src="js/plugins/jquery.scrollbar.min.js")
         script(src="js/plugins/jquery.jInvertScroll.min.js")
+        script(src="js/plugins/scroll.js")
         script(src="js/plugins/svg-injector.min.js")
         script(src="js/plugins/svg4everybody.min.js")
         script(src="js/main.min.js")
