--- a/projects/jtProject/frontend/templates/index.jade
+++ b/projects/jtProject/frontend/templates/index.jade
@@ -2,11 +2,10 @@ extends _layout
 
 block content
     include aside
-    main.t-mainPageMain
-
+    main.t-mainMain
         section.t-articlesWrapper
             div.t-scrollContainer
-                div.t-mainCardsHolder
+                div.t-mainCardsHolder.t-mainPageCardCtrl
                     + card('/images/png/Frame.png')
                     + card('http://www.pbs.org/wgbh/nova/next/wp-content/uploads/2017/06/quantum-entanglement_2048x1152.jpg')
                     + card('https://fsmedia.imgix.net/7c/64/de/56/fb79/497e/b8ca/d146bcdd00ab/space-genetics-is-essential-making-life-in-space-work.jpeg')
