--- a/projects/jtProject/frontend/sass/main.sass
+++ b/projects/jtProject/frontend/sass/main.sass
@@ -2,7 +2,8 @@
 @import "styleModules/variables"
 @import "styleModules/mixins"
 @import "default"
-@import "modules/header"
+@import "modules/topMainContent"
 @import "modules/aside"
 @import "modules/main"
 @import "modules/authors"
+@import "modules/authorModal"
