--- a/projects/jtProject/frontend/templates/aside.jade
+++ b/projects/jtProject/frontend/templates/aside.jade
@@ -1,4 +1,7 @@
 aside
+    section.t-logoSection
+        a(href="/").t-logoWrapper
+            div.t-logo
     nav
         ul.t-menuList
             li.t-menuListItem
@@ -27,7 +30,7 @@ aside
                 a(href="/authors.html") Авторы
             li.t-menuListItem
                 a(href="#") Информация
-    div.t-copyWrapper
+    section.t-copyWrapper
         span &copy; ЖТ 2018
         br
         a(href="http://tdsgn.ru/") Создано в Студии Т
